syntax = "proto3";

package protocol;

option go_package = "./protocol";

service NameService {
  rpc NameToUpperCase(NameReq) returns (NameResp);
}

message NameReq {
  string name = 1;
}

message NameResp {
  string name = 1;
}